--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,11 @@ body {
     justify-content: space-evenly;
     padding: 10px;
     border-radius: 10px;
-    background-color: pink;
 }
 
 .left-higher {
     display: flex;
-    background-color: #5d0f1f;
+    background-color: #a01632;
     height: 750px;
     margin-top: 0px;
     width: 520px;
@@ -32,7 +31,7 @@ body {
 }
 
 .left {
-    background-color: #5d0f1f;
+    background-color: #a01632;
     width: 470px;
     height: 700px;
     border-radius: 10px;
@@ -50,11 +49,10 @@ body {
     margin-top: 0px;
 }
 
-.right {
-    background-color: crimson;
+.right-inner {
     width: 470px;
     height: 700px;
-    border-radius: 10px;
+    border-radius: 0px;
     margin-top: 50px;
 }
 
@@ -62,13 +60,14 @@ body {
     width: 470px;
     height: 600px;
     background-color: crimson;
-    border-radius: 10px;
+    border-radius: 0px 0px 0px 10px;
 }
 
 .screen-right {
     width: 470px;
     height: 400px;
     background-color: lightgrey;
+    border-radius: 10px;
 }
 
 .svg-left {
@@ -76,23 +75,30 @@ body {
     fill: crimson;
 }
 
-.svg-left {
+.svg-right {
     vertical-align:top;
+    fill: crimson;
+    border-radius: 10px 10px 0px 0px;
 }
 
 .image-container-left {
-    width: 470px;
+    width: 400px;
     height: 200px;
     background-color: lightgrey;
-    margin-top: 0px;
+    margin: auto;
+    border-radius: 10px;
 }
 
 .image-container-left-evolve {
     height: 200px;
-    width: 470px;
+    width: 400px;
     height: 200px;
     background-color: lightgrey;
     margin-top: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+
 }
 
 ul {
@@ -101,4 +107,21 @@ ul {
 
 p {
     margin-top: 0;
+}
+
+.body-right {
+    background-color: crimson;
+    height: 600px;
+    border-radius: 0px 0px 10px 10px;
+}
+
+.content-right {
+    display: inline-block;
+    margin: auto;
+    margin-top: 10px;
+    background-color: dimgrey;
+    width: 400px;
+    height: 200px;
+    border-radius: 10px;
+    vertical-align: bottom;
 }
